--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">IPTV</string>
+    <string name="app_name">IPTV Medya</string>
     <string name="browse">Seçiniz</string>
     <string name="action_search">Ara</string>
+    <string name="action_exit">Çıkış</string>
     <string name="search_hint">İsimle arayınız</string>
 </resources>
