--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_search">Ara</string>
     <string name="action_exit">Çıkış</string>
     <string name="search_hint">İsimle arayınız</string>
+    <string name="app_id">4F8B3483</string>
 </resources>
